--- a/bestshop mobile/bestshop_mobile/scss/elements/_header.scss
+++ b/bestshop mobile/bestshop_mobile/scss/elements/_header.scss
@@ -1,18 +1,55 @@
-header{
+
+.header__content{
+  width: 100%;
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
   box-shadow: 0px 3px 6px #00000029;
-  padding: 0 1.875em;
-  nav{
-    font-size: 1.5em;
+  @include desktop{
+    display: flex;
+    justify-content: space-between;
+    padding: 0 1em;
+
   }
   .logo{
-    color: $primary-color;
-    font-family: $font-raleway;
-    font-size: 2em;
-    padding: 0.4em 0;
+    @include releway(2em, $primary-color, 0, normal);
+    padding: 0.5em 1em;
   }
-}
+
+    .menu {
+      display: none;
+      li {
+        padding: 1em 1em;
+        list-style: none;
+      }
+    }
+
+  #hamburger{
+    display: none;
+
+    &:checked{
+      ~menu{
+        display: none;
+
+        }
+      }
+    }
+  }
+  .hamburger__toggle{
+    //position: fixed;
+    //top:1em;
+    //left: 1em;
+    padding: 1em 1em;
+    span{
+      width: 20px;
+      height: 2px;
+      display: block;
+      margin-bottom:3px;
+      background-color: $primary-color;
+      transition: 0.3s all ease-in-out;
+      @include desktop{
+        display: none;
+      }
+    }
+  }
+
