--- a/bestshop mobile/bestshop_mobile/scss/elements/_statistics.scss
+++ b/bestshop mobile/bestshop_mobile/scss/elements/_statistics.scss
@@ -6,15 +6,41 @@
   align-content: center;
   h2{
     text-align: center;
-    margin: 3.125em auto;
+    margin: 3.125em auto .5em auto;
     max-width: 9.93em;
     @include releway(30px, #000, 0, normal);
   }
-  .circle{
-    margin-top: 1.5625em;
-    width: 3.875em;
-    height: 3.875em;
-    border-radius: 3.875em;
-    background-color: $color-reddish;
+  .stats__boxes{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    %circle--holder{
+      width: 3.875em;
+      height: 3.875em;
+      border-radius: 3.875em;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+    .circle{
+      margin-top: 1.5625em;
+      @extend %circle--holder;
+      background-color: $color-reddish;
+    }
+    .circle:nth-child(2) {
+      background-color: $primary-color;
+    }
+    .stats__img{
+      position: relative;
+      left: 38%;
+
+    }
+    h3{
+      @include releway(1.25em, #000, 0.3725em, normal);
+      margin: 0.5em auto 0.5em auto;
+    }
+    p{
+      @include releway(1em, $color-lightgray, 0, normal);
+    }
   }
 }
